--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,11 @@ importlib-metadata==5.0.0
 joblib==1.2.0
 nltk==3.7
 numpy==1.21.6
+openai==0.24.0
 openpyxl==3.0.10
 packaging==21.3
 pandas==1.3.5
+pandas-stubs==1.2.0.62
 Pillow==9.2.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
