--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,11 @@ certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.6
+Cython==0.29.28
 et-xmlfile==1.1.0
 filelock==3.8.0
+fuzzywuzzy==0.18.0
+gensim==4.2.0
 huggingface-hub==0.10.1
 idna==3.4
 importlib-metadata==5.0.0
@@ -27,6 +30,7 @@ scipy==1.7.3
 sentence-transformers==2.2.2
 sentencepiece==0.1.97
 six==1.16.0
+smart-open==6.2.0
 threadpoolctl==3.1.0
 tokenizers==0.13.1
 torch==1.12.1
