--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ huggingface-hub==0.10.1
 idna==3.4
 importlib-metadata==5.0.0
 joblib==1.2.0
+Levenshtein==0.20.8
 nltk==3.7
 numpy==1.21.6
 openai==0.24.0
@@ -21,8 +22,10 @@ pandas-stubs==1.2.0.62
 Pillow==9.2.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
+python-Levenshtein==0.20.8
 pytz==2022.5
 PyYAML==6.0
+rapidfuzz==2.13.2
 regex==2022.9.13
 requests==2.28.1
 scikit-learn==1.0.2
